# MyLearning

Langchain/: pyproject.toml
Langchain/build-chatbot/: chatbot.py
Langchain/chains/: chain_basic.py  chains_runnable_funcs.py
Langchain/chat_models/: chat_model_basic.py  chat_model_basic_convo.py
Langchain/prompt_templates/: prompt_templates_chat_model.py
LangchainLearning/: pyproject.toml
LangchainLearning/build-chatbot/: chatbot.py
LangchainLearning/chains/: chain_parallels.py
LangchainLearning/chat_models/: chat_model_basic.py  chat_model_linked_to_firebase.py  chat_model_live_convo.py
LangchainLearning/official-docs-tutorials/: build-a-simple-llm-using-lcel.py  build-vector-stores-and-retrievers.py
share_prompts/: package-lock.json
