[tool.poetry]
name = "langchain-learning"
version = "0.1.0"
description = ""
authors = ["Akshay Raman <akshay.raman97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-groq = "^0.1.6"
python-dotenv = "^1.0.1"
langchain-google-firestore = "^0.3.0"
langserve = {extras = ["all"], version = "^0.2.2"}
transformers = "^4.43.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
